--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "this is namaste React by ashish kumar",
  
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
