--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react",
   "version": "1.0.0",
   "description": "this is namaste React by ashish kumar",
- 
   "scripts": {
     "test": "jest",
     "start": "parcel index.html",
@@ -12,16 +11,20 @@
     "type": "git",
     "url": "git+https://github.com/Ashishk9670/namaste-react.git"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "ashish",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Ashishk9670/namaste-react/issues"
   },
   "homepage": "https://github.com/Ashishk9670/namaste-react#readme",
-  "browserlist" :[
+  "browserlist": [
     "last 2  version"
-  ]
-
+  ],
+  "dependencies": {
+    "react-router-dom": "^6.25.1"
+  },
+  "devDependencies": {
+    "parcel": "^2.12.0"
+  }
 }
