--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6"
   }
 }
