--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "last 2  version"
   ],
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "parcel": "^2.12.0",
     "postcss": "^8.4.39",
+    "process": "^0.11.10",
     "tailwindcss": "^3.4.6"
   }
 }
