--- a/package.json
+++ b/package.json
@@ -18,15 +18,24 @@
     "url": "https://github.com/Ashishk9670/namaste-react/issues"
   },
   "homepage": "https://github.com/Ashishk9670/namaste-react#readme",
-  "browserlist": [
+  "browserslist": [
     "last 2  version"
   ],
   "dependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@reduxjs/toolkit": "^2.2.6",
+    "@testing-library/jest-dom": "^6.4.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@testing-library/dom": "^10.3.2",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "postcss": "^8.4.39",
     "process": "^0.11.10",
